--- a/css/demo.css
+++ b/css/demo.css
@@ -393,3 +393,112 @@
 
 }
 /* banner部分 end*/
+/* host部分 */
+.home-hero{
+    margin-top: 14px;
+    height: 170px;
+}
+.home-hero .home-hero-sub>li{
+    display: block;
+    width: 234px;
+    background-color: #5f5750;
+    font-size: 12px;
+    text-align: center;
+    margin: 0;
+}
+.home-hero .left_btn ul{
+    padding: 3px;
+    vertical-align: top;
+}
+.home-hero .left_btn li{
+    width: 70px;
+    height: 82px;
+    padding: 0 3px;
+    opacity: 0.6;
+    position: relative;
+    transition: opacity 200ms ease-in;
+    
+}
+.home-hero .left_btn li:hover{
+    opacity: 1;
+    font-size: 13px;
+}
+.home-hero .left_btn li::after,.home-hero .left_btn li::before{
+    position: absolute;
+    content: "";
+    background: #665e57;
+}
+.home-hero .left_btn li::after{
+    top: 6px;
+    left: 0;
+    width: 1px;
+    height: 70px;
+}
+.home-hero .left_btn li::before{
+    top: -1px;
+    left: 6px;
+    width: 64px;
+    height: 1px;
+}
+.home-hero .left_btn li a{
+    display: block;
+    padding-top: 18px;
+    color: #fff;
+    line-height: 26px;
+}
+.home-hero .left_btn li span{
+    display: block;
+    width: 24px;
+    height: 24px;
+    margin: 0 auto;
+
+}
+.home-hero .left_btn li:nth-child(1) span{
+    background: url(../img/shizhong.png) no-repeat;
+    background-size: 24px;
+
+}
+.home-hero .left_btn li:nth-child(2) span{
+    background: url(../img/qiye.png) no-repeat;
+    background-size: 24px;
+
+}
+.home-hero .left_btn li:nth-child(3) span{
+    background: url(../img/Fma.png) no-repeat;
+    background-size: 24px;
+
+}
+.home-hero .left_btn li:nth-child(4) span{
+    background: url(../img/mifenka.png) no-repeat;
+    background-size: 24px;
+
+}
+.home-hero .left_btn li:nth-child(5) span{
+    background: url(../img/huanxin.png) no-repeat;
+    background-size: 24px;
+
+}
+.home-hero .left_btn li:nth-child(6) span{
+    background: url(../img/chongzhi.png) no-repeat;
+    background-size: 24px;
+
+}
+.home-hero .item{
+    width: 316px!important;
+    margin-left: 14.5px!important;
+
+}
+.home-hero .item a{
+    display: block;
+    height: 170px;
+    /* vertical-align: top; */
+}
+.home-hero .item img{
+    width: 316px;
+    height: 170px;
+}
+/* left_btn */
+/* left_btn end*/
+
+
+/* host部分 end*/
