--- a/css/demo.css
+++ b/css/demo.css
@@ -517,9 +517,9 @@
 }
 .page-main .box-bd{
     position: relative;
-    height: 340px;
+    /* height: 340px; */
     width: 1226px;
-    background-color: #f5f5f5;
+    /* background-color: #f5f5f5; */
 
 }
 .page-main .box-bd .box{
@@ -655,10 +655,60 @@
     margin: 22px 0;
     overflow: hidden;
 }
-.home-brick-box{
-    
+.home-brick-box .box-bd .left_brick_list a{
+    overflow: hidden;
+    display: block;
+}
+.home-brick-box .box-bd .left_brick_list a img{
+    vertical-align: top;
+}
+.home-brick-box .brick-list-box{
+    width: 992px;
+    /* margin-left: 14px; */
+
 }
 
 
+.brick-list-box .brick-list{
+    width: 992px;
+    vertical-align: top;
+}
+.brick-list-box .brick-list li a{
+    text-align: center;
+    line-height: 1.5;
+    height: 260px;
+    padding: 20px 0;
+    position: relative;
+    z-index: 1;
+    width: 234px;
+    /* margin-bottom: 14px; */
+    display: block;
+    background: #fff;
 
+}
+.brick-list-box .brick-list li{
+    margin-left: 14px;
+    margin-bottom: 14px;
+
+}
+
+
+.brick-list-box .brick-box .img{
+    width: 160px;
+    height: 160px;
+    margin: 0 auto 18px;
+}
+.brick-list-box .brick-box .title{
+    margin: 0 10px 2px;
+}
+.brick-list-box .brick-box .desc{
+    margin: 0 10px 10px;
+    height: 18px;
+    font-size: 12px;
+    color: #b0b0b0;
+}
+.brick-list-box .brick-box .price{
+    margin: 0 10px 14px;
+
+}
 /* title_pic部分 end*/
