--- a/css/demo.css
+++ b/css/demo.css
@@ -502,8 +502,10 @@
 /* page-main部分 */
 .page-main{
     max-width: 100%;
+    /* background-color: #ccc9c9; */
     background-color: #f5f5f5;
     margin-top: 26px;
+    padding-bottom: 25px;
 
 }
 .page-main .box-hd .title{
@@ -517,9 +519,7 @@
 }
 .page-main .box-bd{
     position: relative;
-    /* height: 340px; */
     width: 1226px;
-    /* background-color: #f5f5f5; */
 
 }
 .page-main .box-bd .box{
@@ -652,8 +652,11 @@
 .page-main .title_pic{
     display: block;
     height: 120px;
-    margin: 22px 0;
+    margin: 36px 0 22px 0;
     overflow: hidden;
+}
+.home-brick-box{
+    margin-bottom: 8px;
 }
 .home-brick-box .box-bd .left_brick_list a{
     overflow: hidden;
@@ -709,6 +712,183 @@
 }
 .brick-list-box .brick-box .price{
     margin: 0 10px 14px;
+    color: #ff6709;
 
 }
+
+.home-brick-box .brick-promo-left {
+    width: 234px;
+    margin: 0 0 -14px -14px;
+}
+.home-brick-box .brick-promo-left li{
+    height: 300px;
+}
+.home-brick-box .brick-promo-right{
+    margin: 0 0 -14px -14px;
+    width: 992px;
+    height: 614px;
+    padding-left: 28px;
+    font-size: 14px;
+}
+.home-brick-box .brick-promo-right li{
+    text-align: center;
+    padding: 20px 0;
+    height: 260px;
+    line-height: 1.5;
+}
+.home-brick-box .brick-promo-right a{
+    display: block;
+}
+.home-brick-box .brick-promo-right img{
+    width: 160px;
+    height: 160px;
+    margin: 0 auto 18px;
+    vertical-align: top;
+
+}
+.home-brick-box .brick-promo-right .title{
+    margin: 0 10px 2px;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.home-brick-box .brick-promo-right .desc{
+    margin: 0 10px 10px;
+    height: 18px;
+    font-size: 12px;
+    color: #b0b0b0;
+}
+.home-brick-box .brick-promo-right .price{
+    margin: 0 10px 14px;
+    text-align: center;
+    color: #ff6700;
+    font-size: 14px;
+
+}
+.home-brick-box .brick-promo-right .price del{
+    margin-left: .5em;
+    color: #b0b0b0;
+}
+.home-brick-box .brick-promo-right .sm{
+    padding-bottom: 0;
+    height: 93px !important;
+    position: relative;
+    z-index: 1;
+    float: left;
+    /* text-align: left !important; */
+    width: 234px;
+    margin-left: 14px;
+    margin-bottom: 14px;
+    padding-top: 50px;
+    background: #fff;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+}
+.home-brick-box .sm img{
+    width: 80px;
+    height: 80px;
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    position: absolute;
+    right: 20px;
+    top: 32px;
+}
+.home-brick-box .sm .title{
+    margin: -10px 120px 5px 30px;
+    word-wrap:break-word;  
+    word-break:break-all;  
+    text-align: left;
+}
+.home-brick-box .sm .price{
+    margin: 0 110px 0 30px;
+    text-align: left;
+}
+.home-brick-box .sm .icon{
+    position: absolute;
+    right: 35px;
+    top: 48px;
+    width: 48px;
+    height: 48px;
+}
+.home-brick-box .sm i{
+    font-size: 48px;
+    vertical-align: top;
+    line-height: 48px;
+    text-align: center;
+    color: #ff6700;
+}
+.home-brick-box .sm .more{
+    text-align: left;
+    margin: 0 110px 0 30px;
+    font-size: 12px;
+    color: #757575;
+}
+.home-brick-box .sm .more .a{
+    font-size: 18px;
+    color: #333;
+    padding-bottom: 2px;
+}
+/* 小米视频 */
+.box-bd .video-list{
+    width: 1240px;
+    height: 285px;
+}
+.box-bd .video-list .video-item{
+    background-color: #fff;
+    text-align: center;
+    line-height: 1.5;
+    width: 296px;
+    height: 285px;
+    margin: 0 0 14px 14px;
+
+}
+.box-bd .video-list .video-item:first-child{
+    margin-left: 0px;
+}
+.box-bd .video-list .video-item:hover .video-pic span{
+    background-color: #ff6700;
+    border-color: #ff6700;
+}
+.box-bd .video-list .video-item .video-pic{
+    position: relative;
+    margin-bottom: 28px;
+    width: 296px;
+    height: 180px;
+}
+.box-bd .video-list .video-item .video-pic span{
+    display: inline-block;
+    margin: 0 auto;
+    width: 32px;
+    height: 20px;
+    position: absolute;
+    left: 20px;
+    bottom: 10px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.6);
+    border: 2px solid #fff;
+    border-radius: 12px;
+    text-align: center;
+    line-height: 20px;
+    transition: all .2s;
+    -webkit-transition: all .2s;
+}
+.box-bd .video-list .video-item .video-pic .icon{
+    font-size: 19px;
+    vertical-align: 1px;
+}
+/* 小米视频 end*/
 /* title_pic部分 end*/
+/* footer部分 */
+.site-footer{
+    width: 100%;
+    background-color: #fff;
+}
+
+
+
+
+/* footer部分 end*/
+
